Fixed title sponsor gold alignment.

--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ div.supporter-enclosure figure img{
 
 .supporter-item.diamond img {
     height: auto;
-    max-width: 230px;
+    max-width: 255px;
     max-height: 230px;
 }
 
